--- a/src/LoginPage/LoginPage.css
+++ b/src/LoginPage/LoginPage.css
@@ -7,7 +7,7 @@ body {
 
   @font-face {
     font-family: 'MyFont';
-    src: url('./fonts/CormorantGaramond-Regular.ttf') format('truetype');
+    src: url('../fonts/CormorantGaramond-Regular.ttf') format('truetype');
   }
   
   /* center the page and add some padding */
