--- a/src/SignUpChoice/SignupChoice.css
+++ b/src/SignUpChoice/SignupChoice.css
@@ -7,7 +7,7 @@ body{
 
 @font-face {
   font-family: 'MyFont';
-  src: url('./fonts/CormorantGaramond-Regular.ttf') format('truetype');
+  src: url('../fonts/CormorantGaramond-Regular.ttf') format('truetype');
 }
 
 .image-group{
