--- a/src/Homepage/HomePage.css
+++ b/src/Homepage/HomePage.css
@@ -1,238 +1,61 @@
-body{
-    margin: 0px;
-}
-
-.home-page-container{
-    margin: 0%;
+.about-page {
     display: flex;
-    flex-direction: column;
-}
-
-*{
-    margin:0;
-    padding:0;
-    text-decoration: none;
-}
-.container{
-    display:flex;
-}
-main{
-    width: 100%;
-    padding: 20px;
-}
-.sidebar{
-    /* background: linear-gradient(#FFA07A, #FF7F50, #FF6347); */
-    background-color: #EE7A1E;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='600' y1='25' x2='600' y2='777'%3E%3Cstop offset='0' stop-color='%23EE7A1E'/%3E%3Cstop offset='1' stop-color='%23770613'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='650' y1='25' x2='650' y2='777'%3E%3Cstop offset='0' stop-color='%23ee6811'/%3E%3Cstop offset='1' stop-color='%23860611'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='700' y1='25' x2='700' y2='777'%3E%3Cstop offset='0' stop-color='%23e25810'/%3E%3Cstop offset='1' stop-color='%2394060d'/%3E%3C/linearGradient%3E%3ClinearGradient id='d' gradientUnits='userSpaceOnUse' x1='750' y1='25' x2='750' y2='777'%3E%3Cstop offset='0' stop-color='%23d6490f'/%3E%3Cstop offset='1' stop-color='%23a30609'/%3E%3C/linearGradient%3E%3ClinearGradient id='e' gradientUnits='userSpaceOnUse' x1='800' y1='25' x2='800' y2='777'%3E%3Cstop offset='0' stop-color='%23cb3b0d'/%3E%3Cstop offset='1' stop-color='%23b20806'/%3E%3C/linearGradient%3E%3ClinearGradient id='f' gradientUnits='userSpaceOnUse' x1='850' y1='25' x2='850' y2='777'%3E%3Cstop offset='0' stop-color='%23bf2e0c'/%3E%3Cstop offset='1' stop-color='%23c10d05'/%3E%3C/linearGradient%3E%3ClinearGradient id='g' gradientUnits='userSpaceOnUse' x1='900' y1='25' x2='900' y2='777'%3E%3Cstop offset='0' stop-color='%23b3220b'/%3E%3Cstop offset='1' stop-color='%23d01405'/%3E%3C/linearGradient%3E%3ClinearGradient id='h' gradientUnits='userSpaceOnUse' x1='950' y1='25' x2='950' y2='777'%3E%3Cstop offset='0' stop-color='%23a7180a'/%3E%3Cstop offset='1' stop-color='%23df1b04'/%3E%3C/linearGradient%3E%3ClinearGradient id='i' gradientUnits='userSpaceOnUse' x1='1000' y1='25' x2='1000' y2='777'%3E%3Cstop offset='0' stop-color='%239b0e09'/%3E%3Cstop offset='1' stop-color='%23ef2403'/%3E%3C/linearGradient%3E%3ClinearGradient id='j' gradientUnits='userSpaceOnUse' x1='1050' y1='25' x2='1050' y2='777'%3E%3Cstop offset='0' stop-color='%238f080a'/%3E%3Cstop offset='1' stop-color='%23fd2e04'/%3E%3C/linearGradient%3E%3ClinearGradient id='k' gradientUnits='userSpaceOnUse' x1='1100' y1='25' x2='1100' y2='777'%3E%3Cstop offset='0' stop-color='%2383070f'/%3E%3Cstop offset='1' stop-color='%23fe4111'/%3E%3C/linearGradient%3E%3ClinearGradient id='l' gradientUnits='userSpaceOnUse' x1='1150' y1='25' x2='1150' y2='777'%3E%3Cstop offset='0' stop-color='%23770613'/%3E%3Cstop offset='1' stop-color='%23FF531F'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg %3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' x='100' width='1100' height='800'/%3E%3Crect fill='url(%23c)' x='200' width='1000' height='800'/%3E%3Crect fill='url(%23d)' x='300' width='900' height='800'/%3E%3Crect fill='url(%23e)' x='400' width='800' height='800'/%3E%3Crect fill='url(%23f)' x='500' width='700' height='800'/%3E%3Crect fill='url(%23g)' x='600' width='600' height='800'/%3E%3Crect fill='url(%23h)' x='700' width='500' height='800'/%3E%3Crect fill='url(%23i)' x='800' width='400' height='800'/%3E%3Crect fill='url(%23j)' x='900' width='300' height='800'/%3E%3Crect fill='url(%23k)' x='1000' width='200' height='800'/%3E%3Crect fill='url(%23l)' x='1100' width='100' height='800'/%3E%3C/g%3E%3C/svg%3E");
-    background-attachment: fixed;
-    background-size: cover;
-    color: #fff;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
-    width: 200px;
-    transition: all 0.5s;
-    margin: 0px;
-    padding: 0px;
-    position: sticky;
-}
-
-/* .profile{
-    background-color: #EE6A42;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3CradialGradient id='a' gradientUnits='objectBoundingBox'%3E%3Cstop offset='0' stop-color='%23773613'/%3E%3Cstop offset='1' stop-color='%23EE6A42'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='750' x2='1550' y2='750'%3E%3Cstop offset='0' stop-color='%23c54b18'/%3E%3Cstop offset='1' stop-color='%23EE6A42'/%3E%3C/linearGradient%3E%3Cpath id='s' fill='url(%23b)' d='M1549.2 51.6c-5.4 99.1-20.2 197.6-44.2 293.6c-24.1 96-57.4 189.4-99.3 278.6c-41.9 89.2-92.4 174.1-150.3 253.3c-58 79.2-123.4 152.6-195.1 219c-71.7 66.4-149.6 125.8-232.2 177.2c-82.7 51.4-170.1 94.7-260.7 129.1c-90.6 34.4-184.4 60-279.5 76.3C192.6 1495 96.1 1502 0 1500c96.1-2.1 191.8-13.3 285.4-33.6c93.6-20.2 185-49.5 272.5-87.2c87.6-37.7 171.3-83.8 249.6-137.3c78.4-53.5 151.5-114.5 217.9-181.7c66.5-67.2 126.4-140.7 178.6-218.9c52.3-78.3 96.9-161.4 133-247.9c36.1-86.5 63.8-176.2 82.6-267.6c18.8-91.4 28.6-184.4 29.6-277.4c0.3-27.6 23.2-48.7 50.8-48.4s49.5 21.8 49.2 49.5c0 0.7 0 1.3-0.1 2L1549.2 51.6z'/%3E%3Cg id='g'%3E%3Cuse href='%23s' transform='scale(0.12) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.2) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.25) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(0.3) rotate(-20)'/%3E%3Cuse href='%23s' transform='scale(0.4) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(0.5) rotate(20)'/%3E%3Cuse href='%23s' transform='scale(0.6) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.7) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.835) rotate(-40)'/%3E%3Cuse href='%23s' transform='scale(0.9) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(1.05) rotate(25)'/%3E%3Cuse href='%23s' transform='scale(1.2) rotate(8)'/%3E%3Cuse href='%23s' transform='scale(1.333) rotate(-60)'/%3E%3Cuse href='%23s' transform='scale(1.45) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(1.6) rotate(10)'/%3E%3C/g%3E%3C/defs%3E%3Cg transform='translate(980 0)'%3E%3Cg transform='translate(0 750)'%3E%3Ccircle fill='url(%23a)' r='3000'/%3E%3Cg opacity='0.5'%3E%3Ccircle fill='url(%23a)' r='2000'/%3E%3Ccircle fill='url(%23a)' r='1800'/%3E%3Ccircle fill='url(%23a)' r='1700'/%3E%3Ccircle fill='url(%23a)' r='1651'/%3E%3Ccircle fill='url(%23a)' r='1450'/%3E%3Ccircle fill='url(%23a)' r='1250'/%3E%3Ccircle fill='url(%23a)' r='1175'/%3E%3Ccircle fill='url(%23a)' r='900'/%3E%3Ccircle fill='url(%23a)' r='750'/%3E%3Ccircle fill='url(%23a)' r='500'/%3E%3Ccircle fill='url(%23a)' r='380'/%3E%3Ccircle fill='url(%23a)' r='250'/%3E%3C/g%3E%3Cg transform='rotate(-129.6 0 0)'%3E%3Cuse href='%23g' transform='rotate(10)'/%3E%3Cuse href='%23g' transform='rotate(120)'/%3E%3Cuse href='%23g' transform='rotate(240)'/%3E%3C/g%3E%3Ccircle fill-opacity='0.28' fill='url(%23a)' r='3000'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-    background-attachment: fixed;
-    background-size: cover;
-    height: 30vh;
-    display: flex;
-    flex-direction: row;
-    background-color: lightblue;
-}
-
-.profile-image{
-    width: 100px;
-} */
-
-.profile {
-  display: flex;
-  background-color: #EE6A42;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3CradialGradient id='a' gradientUnits='objectBoundingBox'%3E%3Cstop offset='0' stop-color='%23773613'/%3E%3Cstop offset='1' stop-color='%23EE6A42'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='750' x2='1550' y2='750'%3E%3Cstop offset='0' stop-color='%23c54b18'/%3E%3Cstop offset='1' stop-color='%23EE6A42'/%3E%3C/linearGradient%3E%3Cpath id='s' fill='url(%23b)' d='M1549.2 51.6c-5.4 99.1-20.2 197.6-44.2 293.6c-24.1 96-57.4 189.4-99.3 278.6c-41.9 89.2-92.4 174.1-150.3 253.3c-58 79.2-123.4 152.6-195.1 219c-71.7 66.4-149.6 125.8-232.2 177.2c-82.7 51.4-170.1 94.7-260.7 129.1c-90.6 34.4-184.4 60-279.5 76.3C192.6 1495 96.1 1502 0 1500c96.1-2.1 191.8-13.3 285.4-33.6c93.6-20.2 185-49.5 272.5-87.2c87.6-37.7 171.3-83.8 249.6-137.3c78.4-53.5 151.5-114.5 217.9-181.7c66.5-67.2 126.4-140.7 178.6-218.9c52.3-78.3 96.9-161.4 133-247.9c36.1-86.5 63.8-176.2 82.6-267.6c18.8-91.4 28.6-184.4 29.6-277.4c0.3-27.6 23.2-48.7 50.8-48.4s49.5 21.8 49.2 49.5c0 0.7 0 1.3-0.1 2L1549.2 51.6z'/%3E%3Cg id='g'%3E%3Cuse href='%23s' transform='scale(0.12) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.2) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.25) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(0.3) rotate(-20)'/%3E%3Cuse href='%23s' transform='scale(0.4) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(0.5) rotate(20)'/%3E%3Cuse href='%23s' transform='scale(0.6) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.7) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.835) rotate(-40)'/%3E%3Cuse href='%23s' transform='scale(0.9) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(1.05) rotate(25)'/%3E%3Cuse href='%23s' transform='scale(1.2) rotate(8)'/%3E%3Cuse href='%23s' transform='scale(1.333) rotate(-60)'/%3E%3Cuse href='%23s' transform='scale(1.45) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(1.6) rotate(10)'/%3E%3C/g%3E%3C/defs%3E%3Cg transform='translate(980 0)'%3E%3Cg transform='translate(0 750)'%3E%3Ccircle fill='url(%23a)' r='3000'/%3E%3Cg opacity='0.5'%3E%3Ccircle fill='url(%23a)' r='2000'/%3E%3Ccircle fill='url(%23a)' r='1800'/%3E%3Ccircle fill='url(%23a)' r='1700'/%3E%3Ccircle fill='url(%23a)' r='1651'/%3E%3Ccircle fill='url(%23a)' r='1450'/%3E%3Ccircle fill='url(%23a)' r='1250'/%3E%3Ccircle fill='url(%23a)' r='1175'/%3E%3Ccircle fill='url(%23a)' r='900'/%3E%3Ccircle fill='url(%23a)' r='750'/%3E%3Ccircle fill='url(%23a)' r='500'/%3E%3Ccircle fill='url(%23a)' r='380'/%3E%3Ccircle fill='url(%23a)' r='250'/%3E%3C/g%3E%3Cg transform='rotate(-129.6 0 0)'%3E%3Cuse href='%23g' transform='rotate(10)'/%3E%3Cuse href='%23g' transform='rotate(120)'/%3E%3Cuse href='%23g' transform='rotate(240)'/%3E%3C/g%3E%3Ccircle fill-opacity='0.28' fill='url(%23a)' r='3000'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  background-attachment: fixed;
-  background-size: cover;
-  height: 25vh;
-  align-items: center;
-  /* margin: 20px; */
-}
-
-.profile-pic {
-  width: 150px;
-  height: 150px;
-  margin-left: 5%;
-  border-radius: 50%;
-  margin-right: 20px;
-}
-
-.labels {
-  display: flex;
-  flex-direction: column;
-}
-
-label {
-  font-size: 30px;
-  font-weight: bolder;
-  margin-bottom: 5px;
-}
-
-
-
-.logo-image{
-    width: 50px;
-}
-.top_section{
-    display: flex;
-    align-items:center;
-    padding:20px 15px;
-}
-.logo{
-    font-size: 30px;
-}
-.bars{
-    display: flex;
-    font-size: 25px;
-    margin-left: 50px;
-}
-.link{
-    display: flex;
-    color: #fff;
-    padding: 10px 15px;
-    gap: 15px;
-    transition: all 0.5s;
-}
-.link:hover{
-    background: white;
-    color: #000;
-    transition: all 0.5s;
-}
-.active{
-    background: white;
-    color: #000;
-}
-.icon, .link_text{
-    font-size: 20px;
-}
-
-.listii {
-    display: flex;
-    width: 100%;
+    background-color: #f2f2f2;
   }
   
-.list-container {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  margin-right: 20%;
-  /* align-items: center;
-  justify-content: center; */
-  /* background-color: #000; */
-}
-
-.list-header {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
-  /* background-color: black; */
-  width: 150%;
-}
-
-.list-header p{
-  margin-left: 5px;
-}
-
-.star-heading-wrapper {
-  margin-left: 12%;
-}
-
-.separator {
-  width: 0.1vw;
-  height: 100vh;
-  /* background-color: lightgray;  */
-  /* box-shadow: 0 0 2px black; */
-}
-
-.list {
-  /* background-color: #000; */
-  list-style: none;
-  /* margin: 0px !important; */
-  margin-top: 20px;
-  padding: 0;
-  width: 50%;
-  /* display: flex; */
-  justify-content: center;
-  /* align-items: center; */
-}
-
-.list li {
-  /* padding: 7px; */
-  /* margin-top: 1px; */
-  width: 300%;
-  /* background-color: #000; */
-  margin: auto;
-}
-
-.list-item {
-  border: 1px solid black;
-  /* padding: 10px; */
-  /* margin-bottom: 10px; */
-  /* margin: 0px !important; */
-  margin-bottom: 15px;
-  padding: 0px;
-  word-wrap: break-word;
-  overflow: hidden;
-  /* height: 100px; */
-  min-height: 50px;
-  overflow-y: auto;
-  text-align: left;
-  border-radius: 10px 10px 10px 10px;
-  background-color: #E5E7E9;
-    /* display: flex;
-  flex-direction: column;
-  align-items: flex-start; */
-  /* max-width: 400px;  */
-}
-
-.list-item h3 {
-  margin: 0;
-}
-
-.list-item p {
-  margin-bottom: 10px;
-  margin-left: 15px;
-  font-size: large;
-  font-weight: bold;
-}
-
-.item-heading {
-  margin-top: 0%;
-  background-color: #FF7F50;
-  /* padding: 10px; */
-  font-weight: bold;
-  font-size: larger;
-  margin-bottom: 12px;
-}
-
-.star-item {
-  border: 1px solid black;
-  padding: 0px;
-  margin: 0px;
-  margin-bottom: 10px;
-  margin-left: 20%;
-  width: 300%;
-  /* height: 100px; */
-  min-height: 50px;
-  overflow-y: auto;
-  border-radius: 10px;
-  background-color: #E5E7E9;
-    /* display: flex;
-  flex-direction: column;
-  align-items: flex-start; */
-  /* max-width: 400px;  */
-}
-
+  .slider {
+    position: relative;
+    width: 80%;
+    height: 80%;
+    margin: 0 auto;
+    overflow: hidden;
+  }
+  
+  .slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+    &.active-slide-0 {
+      opacity: 1;
+    }
+    &.active-slide-1 {
+      transform: translateX(100%);
+      opacity: 1;
+    }
+    &.active-slide-2 {
+      transform: translateX(200%);
+      opacity: 1;
+    }
+    &.active-slide-3 {
+      transform: translateX(300%);
+      opacity: 1;
+    }
+  }
+  
+  .slider-arrows {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-bottom: 30px;
+  }
+  
+  .slider-arrows button {
+    background-color: transparent;
+    border: none;
+    font-size: 36px;
+    padding: 0 20px;
+    cursor: pointer;
+  }
+  
+  .slider-arrows button:first-child {
+    margin-right: 20px;
+  }
   
