--- a/src/LoginPage/LoginPage.css
+++ b/src/LoginPage/LoginPage.css
@@ -1,14 +1,11 @@
 /* apply some basic styles to the page */
 body {
-    font-family: 'MyFont';
+    font-family: var(--font2);
     margin: 0px;
     opacity: 1.0;
+    /* background-color: blue; */
   }
 
-  @font-face {
-    font-family: 'MyFont';
-    src: url('../fonts/CormorantGaramond-Regular.ttf') format('truetype');
-  }
   
   /* center the page and add some padding */
   .login-page-container {
@@ -18,6 +15,7 @@ body {
     align-items: center;
     height: 100vh;
     background-size: cover;
+    /* background-color: blue; */
     background-position: center;
   }
 
@@ -32,7 +30,7 @@ body {
 
   .website-name{
     color: black;
-    font-family: 'MyFont';
+    font-family: var(--font2);
     font-weight: bolder;
     font-style: italic;
   }
@@ -43,12 +41,12 @@ body {
     background-color: rgba(255, 255, 255, 0.7);
     border-width: 3px;
     border-style: solid;
-    border-color: red;
+    border: #E5E7E9;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     padding: 20px;
-    width: 400px;
-    height: 400px;
-    border-radius: 10px;
+    width: 26%;
+    height: 50%;
+    border-radius: 2%;
   }
   
   /* apply styles to the form elements */
@@ -63,12 +61,12 @@ body {
     width: 100%;
     max-width: 350px; /* add a max-width to restrict the width */
     padding: 10px;
-    border: 2px solid red;
-    border-radius: 5px;
+    border: 2px solid #E5E7E9;
+    border-radius: 20px;
     font-size: 16px;
     align-items: center;
     color: black;
-    font-family: 'MyFont';
+    font-family: var(--font2);
     background-color: #E5E7E9;
   }
 
@@ -88,7 +86,7 @@ body {
   .forgot-password{
     margin: 0px;
     color: red;
-    font-family: 'MyFont';
+    font-family: var(--font2);
     font-size: larger;
     font-weight: bold;
     margin-right: auto;
@@ -97,7 +95,7 @@ body {
   .signup-link{
     margin: 0px ;
     color: black;
-    font-family: 'MyFont';
+    font-family: var(--font2);
     font-size: larger;
     font-weight: bold;
     margin-left: auto;
@@ -107,12 +105,12 @@ body {
     width: 50%;
     padding: 10px;
     border: none;
-    border-radius: 5px;
+    border-radius: 0px;
     align-items: center;
     margin-top: 10px;
     background-color: red;
     color: white;
     font-size: 20px;
-    font-family: 'MyFont';
+    font-family: var(--font2);
     cursor: pointer;
   }
