--- a/src/Feedbacks/StaffFeedbacks/IndividualStaff/StaffReviewProfile.css
+++ b/src/Feedbacks/StaffFeedbacks/IndividualStaff/StaffReviewProfile.css
@@ -1,4 +1,4 @@
-.teacher-profile-container {
+.staff-profile-container {
     display: grid;
     grid-template-columns: auto 1fr auto;
     /* align-items: center; */
@@ -12,26 +12,26 @@
     /* border-radius: 30%;    */
 }
 
-.teacher-profile-image-container {
+.staff-profile-image-container {
     display: flex;
     align-items: center;
     margin-left: 20%;
 }
 
-.teacher-profile-round-image {
+.staff-profile-round-image {
     width: 150px;
     height: 150px;
     border-radius: 50%;
     object-fit: cover;
 }
 
-.teacher-profile-text-container {
+.staff-profile-text-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.teacher-profile-text-block {
+.staff-profile-text-block {
     display: flex;
     margin-left: 5%;
     flex-direction: column;
@@ -40,11 +40,11 @@
     font-weight: bold;
 }
 
-.teacher-profile-name{
+.staff-profile-name{
     margin-bottom: 2%;
 }
 
-.teacher-profile-designation{
+.staff-profile-designation{
     margin-bottom: 3%;
 }
 
@@ -71,7 +71,7 @@
     color: red;
 }
 
-.teacher-review-block{
+.staff-review-block{
     padding-top: 8%;
     align-items:end 
 }
@@ -82,20 +82,20 @@
     text-align: left;
 }
 
-.teacher-large-text {
+.staff-large-text {
     font-size: 24px;
     font-weight: bold;
     text-align: left;
     /* background-color: blue; */
 }
 
-.teacher-small-text {
+.staff-small-text {
     font-size: 18px;
     text-align: left;
     font-weight: bold;
     color: green;
 }
 
-.teacher-rating{
+.staff-rating{
     align-self: self-start;
 }
