connect korar agey

--- a/src/Dashborad/Dashboard.css
+++ b/src/Dashborad/Dashboard.css
@@ -2,7 +2,7 @@ body{
     margin: 0px;
 }
 
-.home-page-container{
+.dashboard-container{
     margin: 0%;
     display: flex;
     flex-direction: column;
@@ -13,32 +13,14 @@ body{
     padding:0;
     text-decoration: none;
 }
+
 .container{
     display:flex;
 }
+
 main{
     width: 100%;
     padding: 20px;
-}
-
-
-.profile {
-  display: flex;
-  background-color: #333;
-  height: 25vh;
-  align-items: center;
-  /* margin: 20px; */
-  border: 2px solid #E5E7E9;
-  color: white;
-  margin-bottom: 20px;
-}
-
-.profile-pic {
-  width: 150px;
-  height: 150px;
-  margin-left: 5%;
-  border-radius: 50%;
-  margin-right: 20px;
 }
 
 .labels {
@@ -46,101 +28,10 @@ main{
   flex-direction: column;
 }
 
-.profile-review-rating-container {
-  /* margin-right: 10%; */
-  /* background-color: aqua; */
-  text-align: left;
-  margin-left: 20%;
-}
-
-.profile-teacher-large-text {
-  font-size: 20px;
-  font-weight: bold;
-  text-align: left;
-  /* background-color: blue; */
-}
-
-.profile-teacher-small-text {
-  font-size: 18px;
-  text-align: left;
-  font-weight: bold;
-  color: green;
-}
-
-.profile-teacher-review-block{
-  padding-top: 8%;
-  align-items:end 
-}
-
-.bell-container {
-  position: relative;
-  margin-top: -10%;
-  margin-left: 8%;
-  /* padding-top: 20px; */
-}
-
-.notification-icon {
-  position: absolute;
-  top: 0;
-  right: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: white;
-  cursor: pointer;
-}
-
-.notification-badge {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: red;
-}
-
-.notification-icon:hover {
-  background-color: #e0e0e0;
-}
-
-.notification-list {
-  position: absolute;
-  top: 50px;
-  right: 0;
-  width: 200px;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-  z-index: 1;
-}
-
-.notification-list ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.notification-list li {
-  padding: 10px;
-  border-bottom: 1px solid #ccc;
-}
-
-
 label {
   font-size: 25px;
   font-weight: bolder;
   margin-bottom: 5px;
-}
-
-.element-image{
-    border-radius: 50%;
-    width: 25px;
-    height: 25px;
-    object-fit: cover;
 }
 
 .listii {
@@ -154,25 +45,18 @@ label {
   display: flex;
   flex-direction: column;
   margin-right: 20%;
-  /* align-items: center;
-  justify-content: center; */
-  /* background-color: #000; */
 }
 
-.list-header {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
-  /* background-color: black; */
-  width: 150%;
+.list-header{
+  margin-left: 12rem;
+  font-size: 1.5rem;
+  margin-top: 1rem;
 }
 
-.list-header p{
-  margin-left: 5px;
-}
-
-.star-heading-wrapper {
-  margin-left: 12%;
+.star-header {
+  margin-left: 7rem;
+  font-size: 1.5rem;
+  margin-top: 1rem;
 }
 
 .separator {
@@ -183,15 +67,11 @@ label {
 }
 
 .list {
-  /* background-color: #000; */
   list-style: none;
-  /* margin: 0px !important; */
   margin-top: 20px;
   padding: 0;
   width: 50%;
-  /* display: flex; */
   justify-content: center;
-  /* align-items: center; */
 }
 
 .list li {
@@ -200,66 +80,8 @@ label {
   width: 300%;
   /* background-color: #000; */
   margin: auto;
-  border-radius: 50px;
+  overflow: visible;
+  /* border-radius: 20px; */
+  /* border: 2px solid black; */
+  /* border-radius: 10px; */
 }
-
-.list-item {
-  border: 1px solid #E5E7E9;
-  /* padding: 10px; */
-  /* margin-bottom: 10px; */
-  /* margin: 0px !important; */
-  margin-bottom: 15px;
-  padding: 0px;
-  word-wrap: break-word;
-  overflow: hidden;
-  /* height: 100px; */
-  min-height: 50px;
-  overflow-y: auto;
-  text-align: left;
-  border-radius: 10px;
-  background-color: #E5E7E9;
-    /* display: flex;
-  flex-direction: column;
-  align-items: flex-start; */
-  /* max-width: 400px;  */
-}
-
-.list-item h3 {
-  margin: 0;
-}
-
-.list-item p {
-  margin-bottom: 10px;
-  margin-left: 15px;
-  font-size: large;
-  font-weight: bold;
-}
-
-.item-heading {
-  margin-top: 0%;
-  background-color: #555;
-  /* padding: 10px; */
-  font-weight: bold;
-  font-size: larger;
-  margin-bottom: 12px;
-  text-align: left;
-}
-
-.star-item {
-  border: 1px solid black;
-  padding: 0px;
-  margin: 0px;
-  margin-bottom: 10px;
-  margin-left: 20%;
-  width: 270%;
-  /* height: 100px; */
-  min-height: 50px;
-  overflow-y: auto;
-  border-radius: 10px;
-  background-color: white;
-    /* display: flex;
-  flex-direction: column;
-  align-items: flex-start; */
-  /* max-width: 400px;  */
-}
-  
