--- a/src/Feedbacks/FeedbackForms/ReviewForm/ReviewForm.css
+++ b/src/Feedbacks/FeedbackForms/ReviewForm/ReviewForm.css
@@ -1,28 +1,55 @@
 .review-form-container {
     width: 50%;
     margin: 0 auto;
-    background-color: whitesmoke;
-    border: 2px solid black;
+    /* background-color: rgba(255, 255, 255, 0.7); */
+    background-color: #F1F6F9;
+    border-width: 3px;
+    border-style: solid;
+    border: #E5E7E9;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     justify-content: center;
     margin-top: 10%;
     text-align: left;
     padding: 10px;
     border-radius: 20px;
   }
+
+  .add-review-heading{
+    margin-left: 2%;
+  }
   
   .form-input-section {
     margin-bottom: 20px;
     width: 80%;
+    margin-left: 5%;
+    margin-top: 3%;
   }
   
   textarea {
     width: 100%;
     min-height: 100px;
     padding: 8px;
+    border-radius: 20px;
+    font-size: large;
   }
   
   .radio-section {
     margin-bottom: 20px;
+    margin-left: 5%;
+  }
+
+  .radio-section:hover{
+    background-color: #0fffff66;
+    border-radius: 20px;
+    padding-left: 5px;
+  }
+
+  .ind-option{
+    cursor: pointer;
+  }
+
+  .radio-heading{
+    font-size: x-large;
   }
   
   h2 {
@@ -44,14 +71,19 @@
     align-items: center;
     margin-bottom: 5px;
   }
+
+  .ind-label{
+    font-size: medium;
+  }
   
   input[type='radio'] {
     margin-right:5px;
   }
 
   
-  .submit-button {
-    width: 50%;
+  .review-button {
+    width: 80%;
+    margin-left: 10%;
     padding: 10px;
     border: none;
     border-radius: 0px;
