--- a/src/Dashborad/ReviewItem/ReviewItem.css
+++ b/src/Dashborad/ReviewItem/ReviewItem.css
@@ -7,9 +7,10 @@
     margin: 0 auto;
     box-sizing: border-box;
     text-align: left;
-    border: 1px solid black;
     margin-bottom: 2%;
-    /* border-radius: 10%; */
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+    overflow: hidden;
   }
   
   .review-item-top-section {
@@ -21,16 +22,17 @@
   }
   
   .review-item-image-container {
-    width: 50px;
-    height: 50px;
     margin-right: 20px;
-    border-radius: 50%;
-    overflow: hidden;
+    margin-left: 1rem;
+    margin-top: 0.8rem;
+    overflow: hidden !important;
   }
   
   .review-item-image {
-    width: 100%;
-    height: auto;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    border: 1px solid white;
   }
   
   .review-item-text-container {
@@ -42,14 +44,12 @@
   
   .review-impression {
     margin: 0;
-    font-size: 15px;
-    font-weight: bold;
+    font-size: 1.2rem;
   }
   
-  .date,
-  .name-show {
-    margin: 0;
-    font-size: 15px;
+  .date{
+    font-size: 0.8rem;
+    opacity: 0.8;
   }
 
   .review-item-bottom-section{
