--- a/src/Dashborad/Sidebar/Sidebar.css
+++ b/src/Dashborad/Sidebar/Sidebar.css
@@ -1,6 +1,6 @@
 .sidebar{
     /* background: linear-gradient(#FFA07A, #FF7F50, #FF6347); */
-    background-color: #333;
+    background-color: #6DA9E4;
     color: #fff;
     height: 100vh;
     width: 200px;
