--- a/src/Dashborad/GivenReviewItem/GivenReviewItem.css
+++ b/src/Dashborad/GivenReviewItem/GivenReviewItem.css
@@ -1,15 +1,16 @@
 .given-review-item-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
-    box-sizing: border-box;
-    text-align: left;
-    border: 1px solid black;
-    margin-bottom: 2%;
-    /* border-radius: 10%; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  text-align: left;
+  margin-bottom: 2%;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+  overflow: hidden;
   }
   
   .given-review-item-top-section {
@@ -21,16 +22,17 @@
   }
   
   .given-review-item-image-container {
-    width: 50px;
-    height: 50px;
     margin-right: 20px;
-    border-radius: 50%;
-    overflow: hidden;
+    margin-left: 1rem;
+    margin-top: 0.8rem;
+    overflow: hidden !important;
   }
   
   .given-review-item-image {
-    width: 100%;
-    height: auto;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    border: 1px solid white
   }
   
   .given-review-item-text-container {
@@ -42,18 +44,17 @@
   
   .given-review-impression {
     margin: 0;
-    font-size: 15px;
-    font-weight: bold;
+    font-size: 1rem;
   }
   
   .given-review-name{
     margin: 0;
-    font-size: 15px;
+    font-size: 1.2rem;
   }
 
   .given-review-date{
     margin: 0;
-    font-size: 12px;
+    font-size: 0.8rem;
     opacity: 0.8;
   }
 
