--- a/src/Dashborad/RatingItem/RatingItem.css
+++ b/src/Dashborad/RatingItem/RatingItem.css
@@ -7,9 +7,10 @@
     margin: 0 auto;
     box-sizing: border-box;
     text-align: left;
-    /* border: 1px solid black; */
     margin-bottom: 2%;
-    /* border-radius: 10%; */
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+    overflow: hidden;
   }
   
   .rating-item-top-section {
@@ -21,16 +22,17 @@
   }
   
   .rating-item-image-container {
-    width: 50px;
-    height: 50px;
     margin-right: 20px;
-    border-radius: 50%;
-    overflow: hidden;
+    margin-left: 1rem;
+    margin-top: 0.8rem;
+    overflow: hidden !important;
   }
   
   .rating-item-image {
-    width: 100%;
-    height: auto;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    border: 1px solid white;
   }
   
   .rating-item-text-container {
@@ -40,10 +42,9 @@
     text-align: left;
   }
   
-  .date,
-  .name-show {
+  .date{
     margin: 0;
-    font-size: 15px;
+    font-size: 1rem;
   }
   
   .rating-item-bottom-section {
