--- a/src/Feedbacks/FeedbackForms/RatingForm/RatingForm.css
+++ b/src/Feedbacks/FeedbackForms/RatingForm/RatingForm.css
@@ -4,6 +4,8 @@
 .rating-form-heading {
     margin-top: 5%;
     font-size: xx-large;
+    text-align: left;
+    margin-left: 46%;
 }
   
 
@@ -14,7 +16,7 @@
     border-width: 3px;
     border-style: solid;
     border: #E5E7E9;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
     padding: 20px;
     width: 26%;
     height: 50%;
@@ -26,6 +28,13 @@
 
   .rating-giving-section{
     margin-top: 3%;
+  }
+
+  .rating-giving-section:hover{
+    background-color: #DBDFEA66;
+    border-radius: 20px;
+    padding: 0.5rem;
+
   }
   
   h2 {
