--- a/src/Feedbacks/FeedbackForms/ReviewForm/ReviewForm.css
+++ b/src/Feedbacks/FeedbackForms/ReviewForm/ReviewForm.css
@@ -32,6 +32,10 @@
     border-radius: 20px;
     font-size: large;
   }
+
+  textarea:active{
+    border-color: blue ;
+  }
   
   .radio-section {
     margin-bottom: 20px;
@@ -39,9 +43,10 @@
   }
 
   .radio-section:hover{
-    background-color: #0fffff66;
+    background-color: #DBDFEA66;
     border-radius: 20px;
-    padding-left: 5px;
+    padding: 5px;
+    width: 50%;
   }
 
   .ind-option{
@@ -94,6 +99,7 @@
     font-size: 20px;
     font-family: var(--font2);
     cursor: pointer;
+    margin-bottom: 1rem;
   }
 
 
