--- a/src/Feedbacks/GivenFeedbacks/GivenFeedbacks.css
+++ b/src/Feedbacks/GivenFeedbacks/GivenFeedbacks.css
@@ -47,8 +47,10 @@ label {
   margin-right: 20%;
 }
 
-.given-star-heading-wrapper {
-  margin-left: 12%;
+.list-header{
+  margin-left: 12rem;
+  font-size: 1.5rem !important;
+  margin-top: 1rem;
 }
 
 .given-separator {
@@ -75,43 +77,3 @@ label {
   /* border: 2px solid red; */
   /* border-radius: 10px; */
 }
-
-.list-item {
-  border: 2px solid black;
-  /* padding: 10px; */
-  /* margin-bottom: 10px; */
-  /* margin: 0px !important; */
-  margin-bottom: 15px;
-  padding: 0px;
-  word-wrap: break-word;
-  overflow: hidden;
-  /* height: 100px; */
-  min-height: 50px;
-  overflow-y: auto;
-  text-align: left;
-  border-radius: 10px;
-  background-color: #E5E7E9;
-    /* display: flex;
-  flex-direction: column;
-  align-items: flex-start; */
-  /* max-width: 400px;  */
-}
-
-.star-item {
-  border: 1px solid black;
-  padding: 0px;
-  margin: 0px;
-  margin-bottom: 10px;
-  margin-left: 20%;
-  width: 270%;
-  /* height: 100px; */
-  min-height: 50px;
-  overflow-y: auto;
-  border-radius: 10px;
-  background-color: white;
-    /* display: flex;
-  flex-direction: column;
-  align-items: flex-start; */
-  /* max-width: 400px;  */
-}
-  
