--- a/src/Feedbacks/GivenRatingItem/GivenRatingItem.css
+++ b/src/Feedbacks/GivenRatingItem/GivenRatingItem.css
@@ -1,4 +1,4 @@
-.review-item-container {
+.feedback-item-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,55 +11,54 @@
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
     overflow: hidden;
+    background-color: #F1F6F9;
   }
   
-  .review-item-top-section {
+  /* .item-top-section {
     display: flex;
     align-items: center;
     width: 100%;
     background-color: #333;
     color: white;
-  }
+  } */
   
-  .review-item-image-container {
+  .given-rating-item-image-container {
     margin-right: 20px;
     margin-left: 1rem;
     margin-top: 0.8rem;
     overflow: hidden !important;
   }
   
-  .review-item-image {
+  .given-rating-item-image {
     width: 5rem;
     height: 5rem;
     border-radius: 50%;
-    border: 1px solid white;
+    border: 1px solid white
   }
   
-  .review-item-text-container {
+  .given-rating-item-text-container {
     flex: 1;
     display: flex;
     flex-direction: column;
     text-align: left;
   }
   
-  .review-impression {
+  .given-rating-name{
     margin: 0;
     font-size: 1.2rem;
   }
-  
-  .date{
+
+.given-rating-date{
+    margin: 0;
     font-size: 0.8rem;
     opacity: 0.8;
-  }
-
-  .review-item-bottom-section{
-    text-align: left;
-    float: left;
-    width: 100%;
-    margin: 0px;
+}
+  
+  .rating-item-bottom-section {
     background-color: white;
+    width: 100%;
   }
-
+  
   .toggle-details {
     color: blue;
     border: none;
@@ -71,32 +70,22 @@
     /* transition: background-color 0.3s ease; */
   }
   
-  .toggle-details:hover {
-    /* background-color: #ccc; */
-    text-decoration: underline;
+  .given-rating-item-details-container {
+    display: flex;
+    flex-direction: column;
   }
   
-  .details-section {
-    width: 90%;
-    text-align: left;
+  .details-row {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
     margin-left: 3%;
-    margin-bottom: 3%;
-    margin-top: 1%;
   }
   
-  .details-content {
-    height: 0;
-    overflow: hidden;
-    transition: height 0.3s ease;
-    background-color: blue;
+  .rating-details-text {
+    font-weight: bold;
+    margin-right: 10px;
   }
-  
-  .details-content p {
-    margin: 0;
-    font-size: 18px;
-  }
-  
-  .show-details .details-content {
-    height: auto;
-  }
+
+
   
