--- a/src/Feedbacks/ReviewItem/ReviewItem.css
+++ b/src/Feedbacks/ReviewItem/ReviewItem.css
@@ -1,4 +1,4 @@
-.given-rating-item-container {
+.review-item-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,7 +13,7 @@
     overflow: hidden;
   }
   
-  .given-rating-item-top-section {
+  .review-item-top-section {
     display: flex;
     align-items: center;
     width: 100%;
@@ -21,43 +21,45 @@
     color: white;
   }
   
-  .given-rating-item-image-container {
+  .review-item-image-container {
     margin-right: 20px;
     margin-left: 1rem;
     margin-top: 0.8rem;
     overflow: hidden !important;
   }
   
-  .given-rating-item-image {
+  .review-item-image {
     width: 5rem;
     height: 5rem;
     border-radius: 50%;
-    border: 1px solid white
+    border: 1px solid white;
   }
   
-  .given-rating-item-text-container {
+  .review-item-text-container {
     flex: 1;
     display: flex;
     flex-direction: column;
     text-align: left;
   }
   
-  .given-rating-name{
+  .impression {
     margin: 0;
     font-size: 1.2rem;
   }
-
-.given-rating-date{
-    margin: 0;
+  
+  .date{
     font-size: 0.8rem;
     opacity: 0.8;
-}
-  
-  .given-rating-item-bottom-section {
-    background-color: white;
-    width: 100%;
   }
-  
+
+  .review-item-bottom-section{
+    text-align: left;
+    float: left;
+    width: 100%;
+    margin: 0px;
+    background-color: white;
+  }
+
   .toggle-details {
     color: blue;
     border: none;
@@ -69,22 +71,32 @@
     /* transition: background-color 0.3s ease; */
   }
   
-  .given-rating-item-details-container {
-    display: flex;
-    flex-direction: column;
+  .toggle-details:hover {
+    /* background-color: #ccc; */
+    text-decoration: underline;
   }
   
-  .details-row {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
+  .details-section {
+    width: 90%;
+    text-align: left;
     margin-left: 3%;
+    margin-bottom: 3%;
+    margin-top: 1%;
   }
   
-  .rating-details-text {
-    font-weight: bold;
-    margin-right: 10px;
+  .details-content {
+    height: 0;
+    overflow: hidden;
+    transition: height 0.3s ease;
+    background-color: blue;
   }
-
-
+  
+  .details-content p {
+    margin: 0;
+    font-size: 18px;
+  }
+  
+  .show-details .details-content {
+    height: auto;
+  }
   
