--- a/src/Feedbacks/ReceivedFeedbacks/ReceivedFeedbacks.css
+++ b/src/Feedbacks/ReceivedFeedbacks/ReceivedFeedbacks.css
@@ -196,22 +196,6 @@ body {
 
 
 /* popup design start  */
-.review-details-popIn {
-	position: absolute;
-	height: 60vh;
-	width: 70vw;
-	background: #2C2B3F;
-	top: 50%;
-	left: 50%;
-	z-index: 99;
-	transform: translate(-50%, -50%);
-	border-radius: 10px;
-	padding: 48px;
-	box-sizing: border-box;
-	display: flex;
-	gap: 30px;
-}
-
 .review-details-popIn-overlay {
 	position: absolute;
 	height: 100vh;
@@ -227,7 +211,7 @@ body {
 .review-details-popIn {
 	position: absolute;
 	height: 60vh;
-	width: 70vw;
+	width: 882px;
 	background: #2C2B3F;
 	top: 50%;
 	left: 50%;
@@ -237,11 +221,11 @@ body {
 	padding: 48px;
 	box-sizing: border-box;
 	display: flex;
-	gap: 30px;
+	gap: 70px;
 }
 
 .review-details-popIn .review-details-popIn-header {
-	width: 60%;
+	width: 55%;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
@@ -299,14 +283,14 @@ body {
 	margin-bottom: unset;
 }
 
-.review-description {
+.review-details-popIn .review-description {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 	margin-top: 32px;
 }
 
-.review-description-title {
+.review-details-popIn .review-description-title {
 	font-family: "Mulish", sans-serif;
 	font-style: normal;
 	font-weight: 600;
@@ -316,7 +300,7 @@ body {
 	color: #FFFFFF;
 }
 
-.review-description-details {
+.review-details-popIn .review-description-details {
 	font-family: "Mulish", sans-serif;
 	font-style: normal;
 	font-weight: 400;
@@ -327,20 +311,21 @@ body {
 	margin-top: 16px;
 }
 
-.details-rating {
+.review-details-popIn .details-rating {
 	width: auto;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
+	margin-top: 90px;
 }
 
-.rating-wrapper {
+.review-details-popIn .rating-wrapper {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 }
 
-span.rating-title {
+.review-details-popIn .rating-title {
 	font-family: "Mulish", sans-serif;
 	font-style: normal;
 	font-weight: 600;
@@ -350,13 +335,13 @@ span.rating-title {
 	color: #FFFFFF;
 }
 
-.rating-inner-wrapper {
+.review-details-popIn .rating-inner-wrapper {
 	display: flex;
 	gap: 10px;
 	align-items: center;
 }
 
-span.rating-text {
+.review-details-popIn .rating-text {
 	font-family: "Mulish", sans-serif;
 	font-style: normal;
 	font-weight: 800;
@@ -366,12 +351,64 @@ span.rating-text {
 	color: #FFFFFF;
 }
 
-i#one.fa-star {
+.review-details-popIn i#one.fa-star {
 	color: #f3d779;
 }
 
+.review-details-popIn .review-details-main-wrapper {
+	margin-top: 50px;
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
+	align-items: self-start;
+}
 
+.review-details-popIn .details-rating-heading {
+	font-family: "Mulish", sans-serif;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 24px;
+	line-height: 31px;
+	color: #FFFFFF;
+}
 
+.review-details-popIn .details-rating-wrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.review-details-popIn .details-rating-wrapper .details-rating-item {
+	display: flex;
+	justify-content: space-between;
+	gap: 40px;
+}
+
+.review-details-popIn .details-rating-wrapper .details-rating-item {
+	display: flex;
+	justify-content: space-between;
+	gap: 40px;
+}
+
+.details-rating-item .details-rating-item-title {
+	font-family: "Mulish", sans-serif;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 22px;
+	display: flex;
+	align-items: center;
+	color: #FFFFFF;
+	text-align: left;
+}
+
+.review-details-popIn .details-rating-item .rating,
+.review-details-popIn .rating-inner-wrapper .rating {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	gap: 5px;
+}
 
 
 .review-details-popIn .close-btn {
